--- a/style.css
+++ b/style.css
@@ -15,15 +15,15 @@ th, td {
   padding: 8px;
   font-size: 12px;
 }
-tbody tr:nth-child(1) td:nth-child(5) {
+tbody tr:nth-child(odd) td:nth-child(5) {
   background-color: green;
 }
-tbody tr:nth-child(2) td:nth-child(6) {
+tbody tr:nth-child(even) td:nth-child(6) {
   background-color: red;
 }
-tr:nth-child(even) {
-  background-color: #dddddd;
+tbody tr:nth-child(even) {
+  background-color: #d8d8d8;
 }
-tr:nth-child(odd) {
-  background-color: #606060;
+tbody tr:nth-child(odd) {
+  background-color: #b2b2b2;
 }
