--- a/style.css
+++ b/style.css
@@ -3,18 +3,19 @@
   background-color: #303030;
   box-sizing: border-box;
 }
-nav {
+main {
   margin: 0 auto;
-  padding: 5px 0;
+  padding: 0;
   width: 70%;
   text-align: center;
+}
+nav {
   background-color: #1A5F8A;
 }
 nav h1 {
   font-size: 20px;
   background-color: #1A5F8A;
   color: #C0C0C0;
-  padding-top: 10px;
 }
 nav a {
   font-size: 10px;
@@ -25,12 +26,9 @@ nav a {
 section h2 {
   background: #F0F0F0;
   font-size: 15px;
+  margin: 0;
 }
 section {
-  margin: 0 auto;
-  padding: 20px 0;
-  width: 70%;
-  text-align: center;
   background-color: #F0F0F0;
 }
 section article, img {
@@ -49,7 +47,7 @@ section article p {
     text-align: left;
 }
 section article a {
-  margin: 5px;
+  margin-bottom: : 20px;
   padding: 10px;
   background-color: #1A5F8A;
   color: #F0F0F0;
@@ -58,11 +56,9 @@ section article a {
   font-size: 15px;
 }
 .paslaugos {
-  margin: 0 auto;
   padding: 5px 0;
-  width: 70%;
-  text-align: center;
   background-color: #F0F0F0;
+  margin: 0;
 }
 .paslaugos h2 {
   background-color: #F0F0F0;
@@ -86,10 +82,6 @@ div .paslaugos, .paslaugos a {
   text-decoration: none;
 }
 div {
-  margin: 0 auto;
-  padding: 20px 0;
-  width: 70%;
-  text-align: center;
   background-color: #F0F0F0;
 }
 div h2 {
@@ -97,6 +89,7 @@ div h2 {
   padding-top: 10px;
   border-top: 1px solid black;
   font-size: 15px;
+  margin: 0;
 }
 div table {
   margin: 0 auto;
@@ -130,9 +123,5 @@ div img {
   height: auto;
 }
 footer {
-  margin: 0 auto;
-  padding: 5px 0;
-  width: 70%;
-  text-align: center;
   background-color: #1A5F8A;
 }
