--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ div table th {
   background: #FF7900;
   color: #F0F0F0;
   padding: 10px;
+  margin: 10px;
 }
 table, th, td {
   background: #F0F0F0;
