--- a/style.css
+++ b/style.css
@@ -1,128 +1,50 @@
 * {
   font-family: 'Montserrat', sans-serif;
-  background-color: #303030;
+  background-color: #f0f0f0;
   box-sizing: border-box;
 }
-main {
-  margin: 0 auto;
-  padding: 0;
-  width: 70%;
-  text-align: center;
+#isaacnewton {
+  width: 60.5%;
+  padding: 20px;
+  font-size: 12px;
+  background-color: #ffffff;
+  border-top: 3px solid #7BC5CA;
+  display: block;
 }
-nav {
-  background-color: #1A5F8A;
+#isaacnewton h2, #alberteinstein h2, #nikolatesla h2 {
+  background: #ffffff;
 }
-nav h1 {
-  font-size: 20px;
-  background-color: #1A5F8A;
-  color: #C0C0C0;
-}
-nav a {
-  font-size: 10px;
-  color: #C0C0C0;
-  text-decoration: none;
-  background-color: #1A5F8A;
-}
-section h2 {
-  background: #F0F0F0;
-  font-size: 15px;
-  margin: 0;
-}
-section {
-  background-color: #F0F0F0;
-}
-section article, img {
-  display: inline-block;
-  vertical-align: text-top;
-}
-section article {
-  width: 60%;
-  background: #F0F0F0;
-  padding-left: 10px;
-}
-section article p {
-    background: #F0F0F0;
-    font-size: 10px;
-    padding-bottom: 10px;
-    text-align: left;
-}
-section article a {
-  margin-bottom: : 20px;
-  padding: 10px;
-  background-color: #1A5F8A;
-  color: #F0F0F0;
-  border-radius: 10px;
-  border: none;
-  font-size: 15px;
-}
-.paslaugos {
-  padding: 5px 0;
-  background-color: #F0F0F0;
-  margin: 0;
-}
-.paslaugos h2 {
-  background-color: #F0F0F0;
-  border-top: solid black 1px;
-  padding: 10px;
-  font-size: 15px;
-}
-.paslaugos ul {
-  display: inline-block;
-  text-align: left;
-  background-color: #F0F0F0;
-  width: 47%;
-  border: 1px solid black;
-  border-radius: 5px;
-}
-div .paslaugos, .paslaugos a {
-  font-size: 13px;
-  background: #F0F0F0;
-  color: #202020;
-  border-radius: 20px;
-  text-decoration: none;
-}
-div {
-  background-color: #F0F0F0;
-}
-div h2 {
-  background-color: #F0F0F0;
-  padding-top: 10px;
-  border-top: 1px solid black;
-  font-size: 15px;
-  margin: 0;
-}
-div table {
-  margin: 0 auto;
-}
-div table th {
-  text-align: left;
-  background: #FF7900;
-  color: #F0F0F0;
-  padding: 10px;
+#isaacnewton img {
+  width: 12%;
+  float: left;
   margin: 10px;
 }
-table, th, td {
-  background: #F0F0F0;
-  padding: 5px;
-  font-size: 13px;
-  border: 1px solid #808080;
-  border-collapse: collapse;
-}
-table td a {
-  background: #F0F0F0;
-  color: #FF1919;
-}
-div .kontaktai {
-  background-color: #F0F0F0;
-  border-top: solid black 1px;
+#isaacnewton p, #alberteinstein p, #nikolatesla p {
   padding: 10px;
-  font-size: 15px;
 }
-div img {
-  border: 1px solid black;
-  width: 95%;
-  height: auto;
+#isaacnewton p, p i, #alberteinstein p, #nikolatesla p{
+  background: #ffffff;
 }
-footer {
-  background-color: #1A5F8A;
+#isaacnewton a, #alberteinstein a, #nikolatesla a {
+  padding: 10px;
+  margin: 10px;
+  background-color: #7BC5CA;
+  text-decoration: none;
+  color: #ffffff;
+}
+#alberteinstein, #nikolatesla {
+  width: 30%;
+  padding: 20px;
+  font-size: 12px;
+  background-color: #ffffff;
+  border-top: 3px solid #7BC5CA;
+  display: inline-block;
+  margin-top: 10px;
+  margin-right: 10px;
+  float: left;
+}
+#alberteinstein img, #nikolatesla img {
+  float: left;
+  width: 30%;
+  margin: 10px;
 }
