--- a/style.css
+++ b/style.css
@@ -1,27 +1,6 @@
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  background-color: #f0f0f0;
+  box-sizing: border-box;
   margin: 0;
-  background-color: transparent;
-}
-.wrapper {
-  width: 1000px;
-  margin: 0 auto;
-}
-header {
-    background: #DBBEB4;
-}
-nav {
-  display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: center;
-}
-nav img {
-  width: 8%;
-  border-radius: 50px;
-}
-nav ul li a {
-  text-decoration: none;
-  color: #FFFFFF;
 }
